# orbitr

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  flake.nix  justfile  pyproject.toml
.github/workflows/: ci.yml
scripts/: check_docs_consistency.py
specs/: implementation.md  planning.md  progress.md
src/lumen/: __init__.py  _async.py  cli.py  config.py  exceptions.py
src/lumen/clients/: arxiv.py  base.py  semantic_scholar.py
src/lumen/commands/: __init__.py  author.py  cache.py  doctor.py  export.py  init.py  paper.py  query.py  recommend.py  search.py  zotero.py
src/lumen/core/: __init__.py  cache.py  deduplication.py  export.py  query.py  ranking.py
src/lumen/display/: __init__.py  detail.py  json_fmt.py  list.py  table.py
src/lumen/zotero/: client.py
src/orbitr/: __init__.py  cli.py  config.py  exceptions.py
src/orbitr/clients/: __init__.py  arxiv.py  base.py  karakeep.py  semantic_scholar.py
src/orbitr/commands/: __init__.py  author.py  cache.py  doctor.py  export.py  init.py  karakeep.py  paper.py  query.py  recommend.py  search.py  zotero.py
src/orbitr/core/: cache.py  deduplication.py  export.py  models.py  query.py  ranking.py
src/orbitr/display/: __init__.py  detail.py  json_fmt.py  panels.py  table.py
src/orbitr/zotero/: __init__.py  client.py
tests/: conftest.py  smoke_test.sh  test_arxiv.py  test_author.py  test_base_client.py  test_cache.py  test_cache_cmd.py  test_deduplication.py  test_display_phase4.py  test_docs_consistency.py  test_doctor.py  test_export.py  test_init.py  test_karakeep.py  test_karakeep_client.py  test_models.py  test_paper.py  test_query.py  test_ranking.py  test_recommend.py  test_search.py  test_semantic_scholar.py  test_zotero.py  test_zotero_client.py
tests/fixtures/: ss_citations.json  ss_get_by_id.json  ss_recommendations.json  ss_search.json
