[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lumen"
version = "0.1.1"
description = "Academic literature search CLI for arXiv, Semantic Scholar, and Zotero"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.15",
  "rich>=13.0",
  "httpx>=0.27",
  "pydantic>=2.0",
  "pyzotero>=1.5",
  "feedparser>=6.0",
  "python-dateutil>=2.9",
  "rapidfuzz>=3.0",
  "tomli-w>=1.1",
  "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
lumen = "lumen.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lumen"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "respx>=0.21",
  "ruff>=0.8",
  "pyright>=1.1",
]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = [
  "B008",   # typer.Option/Argument as default is the Typer pattern
  "E501",   # long help strings in CLI signatures are acceptable
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
